refactor extraction: replace curated diff with conformance report